# borgcube

./: .gitignore  README.md  USER_README.md  borgcube.py  config.yaml.example  pyproject.toml  setup.py
borgcube/: __init__.py  borgcube.py  enum.py  exception.py  main.py
borgcube/backend/: authorized_keys.py  borg_repo.py  config.py  model.py  notification.py  storage.py
borgcube/frontend/: admin_command.py  base_command.py  command.py  commandline.py  remote_command.py  shell.py
