[tool.poetry]
name = "borgcube"
version = "0.0.1"
description = "backup server for borgbackup with ssh key management, quotas and periodic reminders"
authors = ["Fina Wilke <code@felinira.net>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7"
atomicwrites = "^1.3.0"
colored = "^1.4.2"
peewee = "^3.13.1"
pyyaml = "^5.3"
sshpubkeys = "*"
psutil = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
borgcube = 'borgcube.main:main'
